test/bad/lr2.pacc
/*
nopacc1 "pacc: fatal: left recursion in rule \`A'"
*/

A :: void <- !"x" A / "y"
